Fix layout issues

--- a/styles/pr-info.less
+++ b/styles/pr-info.less
@@ -28,7 +28,7 @@
     padding: @component-padding;
     border: 1px solid @text-color-subtle;
     border-radius: @component-border-radius;
-    margin-bottom: @component-padding;
+    margin-bottom: @component-padding * 2;
 
     a {
       text-decoration: underline;
