--- a/styles/pr-url-input-box.less
+++ b/styles/pr-url-input-box.less
@@ -7,6 +7,12 @@
     display: flex;
     flex: 1;
     flex-direction: row;
+
+    // TODO: Simplify selector
+    // Only add padding when inside this container
+    .github-PrUrlInputBox-Subview {
+      padding: @component-padding * 2;
+    }
   }
 
   &-pinButton {
@@ -26,7 +32,6 @@
     flex-direction: column;
     align-self: center;
     align-items: center;
-    padding: @component-padding * 2;
 
     > button, > input {
       margin: @component-padding;
